syntax="proto3";

option  csharp_namespace ="WebApplication.Protos";
import "Enums.proto";
import "google/protobuf/timestamp.proto";
message Employee{
	int32 id=1;
	int32 no=2;
	string firstName=3;
	string lastName=4;
	float salary=5;
	EmployeeStatus status =6;
	}

message GetByNoRequest{
	int32 no=1;
}
message EmployeeResponse{
	Employee employee=1;
}
message GetAllRequest{}
message AddPhotoRequest{
    bytes data=1;
}
message AddPhotoResponse{
    bool isOk=1;
}
message EmployeeRequest{
    Employee employee=1;
}
message TokenRequest{
	string username=1;
	string passward=2;
}
message TokenResponse{
	string token=1;
	google.protobuf.Timestamp expiration=2;
	bool success =3;
}

service EmployeeService{
    rpc GetByNo(GetByNoRequest) returns (EmployeeResponse);
    rpc GetAll (GetAllRequest) returns (stream EmployeeResponse);
    rpc AddPhoto (stream AddPhotoRequest) returns (AddPhotoResponse);
    rpc Save (EmployeeRequest) returns (EmployeeResponse);
    rpc SaveAll (stream EmployeeRequest) returns (stream EmployeeResponse);
	rpc CreateToken(TokenRequest) returns(TokenResponse);
}